--- a/api/package.json
+++ b/api/package.json
@@ -1,9 +1,7 @@
 {
   "name": "api",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "start": "nodemon index.js"
   },
@@ -11,10 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "gapi-script": "^1.2.0",
-    "mysql": "^2.18.1",
+    "mongoose": "^6.7.2",
     "nodemon": "^2.0.20",
     "react-google-login": "^5.2.2"
-  }
+  },
+  "description": ""
 }
