--- a/api/exercises/easy.json
+++ b/api/exercises/easy.json
@@ -1,21 +1,169 @@
 [{
-    "test1Name": {
-        "name": "testName",
+    "Knee push-ups": {
         "sets": 3,
-        "reps": 10
+        "reps": 6,
+        "bodyPart": "arms"
     }
 },
 {
-    "test2Name": {
-        "name": "testName",
+    "Bicep-curls": {
         "sets": 3,
-        "reps": 10
+        "reps": 6,
+        "bodyPart":"arms"
     }
 },
 {
-    "test3Name": {
-        "name": "testName",
+    "Tricep extensions": {
         "sets": 3,
-        "reps": 10
+        "reps": 6,
+        "bodyPart":"arms"
     }
-}]
+
+},
+{
+    "Hammer curls": {
+        "sets": 3,
+        "reps": 6,
+        "bodyPart":"arms"
+    }
+
+},
+{
+    "Bench dips with bent knees and planted feet": {
+        "sets": 3,
+        "reps": 6,
+        "bodyPart":"arms"
+    }
+
+},
+{
+    "Inchworm": {
+        "sets": 3,
+        "reps": 6,
+        "bodyPart":"arms"
+    }
+
+},
+{
+    "Tricep dumbbell kickback": {
+        "sets": 3,
+        "reps": 6,
+        "bodyPart":"arms"
+    }
+
+},
+{
+    "Lateral raises": {
+        "sets": 3,
+        "reps": 6,
+        "bodyPart":"arms"
+    }
+
+},
+
+{
+    "Unweighted squat": {
+        "sets": 3,
+        "reps": 12,
+        "bodyPart":"legs"
+    }
+
+},
+
+{
+    "Unweighted lunges": {
+        "sets": 3,
+        "reps": 12,
+        "bodyPart":"legs"
+    }
+
+},
+{
+    "Ball leg curl": {
+        "sets": 3,
+        "reps": 8,
+        "bodyPart":"legs"
+    }
+
+},
+{
+    "Unweighted side lunges": {
+        "sets": 3,
+        "reps": 12,
+        "bodyPart":"legs"
+    }
+
+},
+{
+    "Unweighted sumo squat": {
+        "sets": 3,
+        "reps": 8,
+        "bodyPart":"legs"
+    }
+
+},
+{
+    "Wall-sit": {
+        "sets": 3,
+        "reps": "1 min",
+        "bodyPart":"legs"
+    }
+
+},
+{
+    "Crunches": {
+        "sets": 3,
+        "reps": 8,
+        "bodyPart":"core"
+    }
+
+},
+{
+    "Forearm plank": {
+        "sets": 1,
+        "reps": "30 secs",
+        "bodyPart":"core"
+    }
+
+},
+{
+    "Unweighted russian twist": {
+        "sets": 1,
+        "reps": 8,
+        "bodyPart":"core"
+    }
+
+},
+{
+    "Butterfly sit-up": {
+        "sets": 1,
+        "reps": 6,
+        "bodyPart":"core"
+    }
+
+},
+{
+    "Bridges": {
+        "sets": 3,
+        "reps": 8,
+        "bodyPart":"core"
+    }
+
+},
+{
+    "Supine toe tap": {
+        "sets": 1,
+        "reps": 8,
+        "bodyPart":"core"
+    }
+
+},
+{
+    "Bird Dog": {
+        "sets": 3,
+        "reps": 8,
+        "bodyPart":"core"
+    }
+
+}
+]
