--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
+node_modules
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+/api/node_modules
+/client/node_modules
+node_modules
 /.pnp
 .pnp.js
 
@@ -21,3 +24,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+node_modules/
