--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "jwt-decode": "^3.1.2",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.2.2",
     "react": "^18.2.0",
