--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "gapi-script": "^1.2.0",
+    "jwt-decode": "^3.1.2",
     "react-google-button": "^0.7.2",
     "react-google-login": "^5.2.2"
   }
