--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,7 @@
     "react-dom": "^18.2.0",
     "react-google-button": "^0.7.2",
     "react-router-dom": "^6.4.4",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "sass": "^1.56.1",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
