--- a/exercises/Easy.json
+++ b/exercises/Easy.json
@@ -1,169 +1,168 @@
 [{
-    "Knee push-ups": {
+        "name": "Knee push-ups", 
         "sets": 3,
         "reps": 6,
         "bodyPart": "arms"
-    }
 },
 {
-    "Bicep-curls": {
+        "name": "Bicep-curls",
         "sets": 3,
         "reps": 6,
         "bodyPart":"arms"
-    }
+    
 },
 {
-    "Tricep extensions": {
+        "name": "Tricep extensions",
         "sets": 3,
         "reps": 6,
         "bodyPart":"arms"
-    }
+    
 
 },
 {
-    "Hammer curls": {
+        "name": "Hammer curls",
         "sets": 3,
         "reps": 6,
         "bodyPart":"arms"
-    }
+    
 
 },
 {
-    "Bench dips with bent knees and planted feet": {
+        "name": "Bench dips with bent knees and planted feet",
         "sets": 3,
         "reps": 6,
         "bodyPart":"arms"
-    }
+    
 
 },
 {
-    "Inchworm": {
+        "name": "Inchworm",
         "sets": 3,
         "reps": 6,
         "bodyPart":"arms"
-    }
+    
 
 },
 {
-    "Tricep dumbbell kickback": {
+        "name": "Tricep dumbbell kickback",
         "sets": 3,
         "reps": 6,
         "bodyPart":"arms"
-    }
+    
 
 },
 {
-    "Lateral raises": {
+        "name": "Lateral raises",
         "sets": 3,
         "reps": 6,
         "bodyPart":"arms"
-    }
+    
 
 },
 
 {
-    "Unweighted squat": {
+        "name": "Unweighted squat",
         "sets": 3,
         "reps": 12,
         "bodyPart":"legs"
-    }
+    
 
 },
 
 {
-    "Unweighted lunges": {
+        "name": "Unweighted lunges",
         "sets": 3,
         "reps": 12,
         "bodyPart":"legs"
-    }
+    
 
 },
 {
-    "Ball leg curl": {
+        "name": "Ball leg curl",
         "sets": 3,
         "reps": 8,
         "bodyPart":"legs"
-    }
+    
 
 },
 {
-    "Unweighted side lunges": {
+        "name": "Unweighted side lunges",
         "sets": 3,
         "reps": 12,
         "bodyPart":"legs"
-    }
+    
 
 },
 {
-    "Unweighted sumo squat": {
+        "name": "Unweighted sumo squat",
         "sets": 3,
         "reps": 8,
         "bodyPart":"legs"
-    }
+    
 
 },
 {
-    "Wall-sit": {
+        "name": "Wall-sit",
         "sets": 3,
         "reps": "1 min",
         "bodyPart":"legs"
-    }
+    
 
 },
 {
-    "Crunches": {
+        "name": "Crunches",
         "sets": 3,
         "reps": 8,
         "bodyPart":"core"
-    }
+    
 
 },
 {
-    "Forearm plank": {
+        "name": "Forearm plank",
         "sets": 1,
         "reps": "30 secs",
         "bodyPart":"core"
-    }
+    
 
 },
 {
-    "Unweighted russian twist": {
+        "name": "Unweighted russian twist",
         "sets": 1,
         "reps": 8,
         "bodyPart":"core"
-    }
+    
 
 },
 {
-    "Butterfly sit-up": {
+        "name": "Butterfly sit-up",
         "sets": 1,
         "reps": 6,
         "bodyPart":"core"
-    }
+    
 
 },
 {
-    "Bridges": {
+        "name": "Bridges",
         "sets": 3,
         "reps": 8,
         "bodyPart":"core"
-    }
+    
 
 },
 {
-    "Supine toe tap": {
+        "name": "Supine toe tap",
         "sets": 1,
         "reps": 8,
         "bodyPart":"core"
-    }
+    
 
 },
 {
-    "Bird Dog": {
+        "name": "Bird Dog",
         "sets": 3,
         "reps": 8,
         "bodyPart":"core"
-    }
+    
 
 }
 ]
